updated with liri node app and modified and removed template things with loren ipsum

--- a/about.html
+++ b/about.html
@@ -75,6 +75,7 @@
                     <li> <a href="giftastic.html">GifTastic</a> </li>
                     <li> <a href="star-wars-rpg.html">Star Wars RPG</a> </li>
                     <li> <a href="trivia-game.html">Trivia Game</a> </li>
+                    <li><a href="liri-node-app.html">LIRI Node App</a></li>
                     <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                     <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                   </ul>
@@ -172,41 +173,41 @@
               <!-- HTML -->
               <li class="col-md-4"> <i class="icon-cursor animate fadeInUp" data-wow-delay="0.6s"></i>
                 <h5>HTML</h5>
-                <p>Lorem ipsdolor sit amet, consect adipisc elit.
+                <!-- <p>Lorem ipsdolor sit amet, consect adipisc elit.
                   Don psdolor sit amet, consect tur adipisc
-                  elit. Donec quis erat sed elit s </p>
+                  elit. Donec quis erat sed elit s </p> -->
               </li>
 
               <!-- CSS -->
               <li class="col-md-4"> <i class="icon-book-open animate fadeInUp" data-wow-delay="0.8s"></i>
                 <h5>CSS</h5>
-                <p>Lorem ipsdolor sit amet, consect adipisc elit.
+                <!-- <p>Lorem ipsdolor sit amet, consect adipisc elit.
                   Don psdolor sit amet, consect tur adipisc
-                  elit. Donec quis erat sed elit s </p>
+                  elit. Donec quis erat sed elit s </p> -->
               </li>
 
               <!-- JAVASCRIPT -->
               <li class="col-md-4"> <i class="icon-vector animate fadeInUp" data-wow-delay="0.4s"></i>
                 <h5>JAVASCRIPT</h5>
-                <p>Lorem ipsdolor sit amet, consect adipisc elit.
+                <!-- <p>Lorem ipsdolor sit amet, consect adipisc elit.
                   Don psdolor sit amet, consect tur adipisc
-                  elit. Donec quis erat sed elit s </p>
+                  elit. Donec quis erat sed elit s </p> -->
               </li>
 
               <!-- FIREBASE -->
               <li class="col-md-4"> <i class="icon-magic-wand animate fadeInUp" data-wow-delay="0.6s"></i>
                 <h5>FIREBASE</h5>
-                <p>Lorem ipsdolor sit amet, consect adipisc elit.
+                <!-- <p>Lorem ipsdolor sit amet, consect adipisc elit.
                   Don psdolor sit amet, consect tur adipisc
-                  elit. Donec quis erat sed elit s </p>
+                  elit. Donec quis erat sed elit s </p> -->
               </li>
 
               <!-- Node.js -->
               <li class="col-md-4"> <i class="icon-magic-wand animate fadeInUp" data-wow-delay="0.6s"></i>
                 <h5>NODE.JS</h5>
-                <p>Lorem ipsdolor sit amet, consect adipisc elit.
+                <!-- <p>Lorem ipsdolor sit amet, consect adipisc elit.
                   Don psdolor sit amet, consect tur adipisc
-                  elit. Donec quis erat sed elit s </p>
+                  elit. Donec quis erat sed elit s </p> -->
               </li>
 
               <!-- PHP, JAVA -->
@@ -226,10 +227,9 @@
 
                 <!-- Testi Simple -->
                 <div class="testi-sim"> <i class="qua">“</i>
-                  <p>Lorem ipsum dolor sit amet, onsectetur adipiscing elit. Donec quis erat sed elit sceleris Lorem
-                    ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                  <h6>ROBERT LONG</h6>
-                  <span>abc inc</span>
+                  <p>Hi Debora, nice work on your giphy app! I was able to add my own artist button (Guns N' Roses yeah!) and it pulled relevant gifs. Also the click to animate/pause worked as well. I also liked the theme you used, it was a nice touch. Overall it was a joy to grade your assignment, keep up the great work! </p>
+                  <h6>Ruddy Concepcion</h6>
+                  <span>ITESM Bootcamp</span>
                 </div>
               </div>
 
@@ -286,37 +286,37 @@
       </section>
 
       <!-- My Education -->
-      <section class="education padding-top-150 padding-bottom-100">
-        <div class="container">
+      <!-- <section class="education padding-top-150 padding-bottom-100">
+        <div class="container"> -->
 
           <!-- HEADING BLOCK -->
-          <div class="heading-block-2">
+          <!-- <div class="heading-block-2">
             <h5>checkout</h5>
             <h3 class="letter-space-5">my education</h3>
             <div class="row">
               <p class="margin-top-20 col-md-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis erat
                 sed elit sceleris Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis erat sed elit.</p>
             </div>
-          </div>
+          </div> -->
 
           <!-- Edu List -->
-          <div class="row">
-            <ul class="edu-list">
+          <!-- <div class="row">
+            <ul class="edu-list"> -->
 
               <!-- UNIVERSITY OF DESIGN -->
-              <li class="animate fadeInUp" data-wow-delay="0.4s"> <span>2014 - 2016</span>
+              <!-- <li class="animate fadeInUp" data-wow-delay="0.4s"> <span>2014 - 2016</span>
                 <h5>UNIVERSITY OF DESIGN</h5>
                 <p>Bachelor of Typography</p>
-              </li>
+              </li> -->
 
               <!-- DESIGN UNIVERSITY -->
-              <li class="animate fadeInUp" data-wow-delay="0.6s"> <span>2010 - 2014</span>
+              <!-- <li class="animate fadeInUp" data-wow-delay="0.6s"> <span>2010 - 2014</span>
                 <h5>DESIGN UNIVERSITY</h5>
                 <p>Visual Art & UI</p>
-              </li>
+              </li> -->
 
               <!-- OXFORD UNIVERSITY -->
-              <li class="animate fadeInUp" data-wow-delay="0.8s"> <span>2008 - 2010</span>
+              <!-- <li class="animate fadeInUp" data-wow-delay="0.8s"> <span>2008 - 2010</span>
                 <h5>OXFORD UNIVERSITY</h5>
                 <p>Degree of Design & Art</p>
               </li>
@@ -324,7 +324,7 @@
           </div>
         </div>
       </section>
-    </div>
+    </div> -->
     <!-- End Content -->
 
     <!-- Footer -->
