--- a/trivia-game.html
+++ b/trivia-game.html
@@ -78,6 +78,7 @@
                                         <li> <a href="giftastic.html">GifTastic</a> </li>
                                         <li> <a href="star-wars-rpg.html">Star Wars RPG</a> </li>
                                         <li class="active"> <a href="trivia-game.html">Trivia Game</a> </li>
+                                        <li><a href="liri-node-app.html">LIRI Node App</a></li>
                                         <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                                         <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                                     </ul>
@@ -101,7 +102,7 @@
         <!-- End Header -->
 
         <!--======= HOME AGENCY =========-->
-        <div class="sub-bnr">
+        <!-- <div class="sub-bnr">
             <div class="position-center-center">
                 <div class="container">
                     <div class="ag-text">
@@ -111,7 +112,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Content -->
         <div id="content" class="inner-pages">
