--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,7 @@
                     <li> <a href="giftastic.html">GifTastic</a> </li>
                     <li> <a href="star-wars-rpg.html">Star Wars RPG</a> </li>
                     <li> <a href="trivia-game.html">Trivia Game</a> </li>
+                    <li><a href="liri-node-app.html">LIRI Node App</a></li>
                     <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                     <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                   </ul>
