--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <li> <a href="giftastic.html">GifTastic</a> </li>
                     <li> <a href="star-wars-rpg.html">Star Wars RPG</a> </li>
                     <li> <a href="trivia-game.html">Trivia Game</a> </li>
+                    <li><a href="liri-node-app.html">LIRI Node App</a></li>
                     <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                     <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                   </ul>
@@ -123,6 +124,19 @@
 
           <!-- PORTFOLIO ITEMS -->
           <div id="js-grid-agency" class="items ma-3d col-2">
+
+            <!-- ITEM -->
+            <div class="cbp-item portfolio-item">
+                <article>
+                  <div class="portfolio-image"> <img alt="" src="images/Liri Node App/movie-this-battle-angel.gif">
+                    <div class="portfolio-overlay"> </div>
+                    <div class="position-bottom"> 
+                      <p>Homework </p>
+                      <h4><a href="liri-node-app.html">LIRI Node App</a></h4>
+                    </div>
+                  </div>
+                </article>
+              </div>
 
             <!-- ITEM -->
             <div class="cbp-item portfolio-item">
