--- a/star-wars-rpg.html
+++ b/star-wars-rpg.html
@@ -77,6 +77,7 @@
                     <li> <a href="giftastic.html">GifTastic</a> </li>
                     <li class="active"> <a href="star-wars-rpg.html">Star Wars RPG</a> </li>
                     <li> <a href="trivia-game.html">Trivia Game</a> </li>
+                    <li><a href="liri-node-app.html">LIRI Node App</a></li>
                     <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                     <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                   </ul>
@@ -100,7 +101,7 @@
     <!-- End Header -->
 
     <!--======= HOME AGENCY =========-->
-    <div class="sub-bnr">
+    <!-- <div class="sub-bnr">
       <div class="position-center-center">
         <div class="container">
           <div class="ag-text">
@@ -110,7 +111,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Content -->
     <div id="content" class="inner-pages">
