--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="sticky">
         <div class="container-fluid">
           <!--<div class="logo"> <a href="index.html"><img src="images/logo.png" alt=""></a> </div>-->
-          <div class="logo"><a href="index.html" >Helena Madrid</a></div>
+          <div class="logo"><a href="index.html">Helena Madrid</a></div>
 
           <!-- Nav -->
           <nav class="navbar ownmenu">
@@ -77,7 +77,8 @@
                     <li> <a href="giftastic.html">GifTastic</a> </li>
                     <li> <a href="star-wars-rpg.html">Star Wars RPG</a> </li>
                     <li> <a href="trivia-game.html">Trivia Game</a> </li>
-                    <li><a href="liri-node-app.html">LIRI Node App</a></li>
+                    <li> <a href="liri-node-app.html">LIRI Node App</a></li>
+                    <li> <a href="burger.html">Eat My Burger</a></li>
                     <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                     <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                   </ul>
@@ -125,18 +126,46 @@
           <!-- PORTFOLIO ITEMS -->
           <div id="js-grid-agency" class="items ma-3d col-2">
 
+
             <!-- ITEM -->
             <div class="cbp-item portfolio-item">
-                <article>
-                  <div class="portfolio-image"> <img alt="" src="images/Liri Node App/movie-this-battle-angel.gif">
-                    <div class="portfolio-overlay"> </div>
-                    <div class="position-bottom"> 
-                      <p>Homework </p>
-                      <h4><a href="liri-node-app.html">LIRI Node App</a></h4>
-                    </div>
+              <article>
+                <div class="portfolio-image"> <img alt="" src="images/Resume/general.gif">
+                  <div class="portfolio-overlay"> </div>
+                  <div class="position-bottom">
+                    <p>Homework </p>
+                    <h4><a href="liri-node-app.html">LIRI Node App</a></h4>
                   </div>
-                </article>
-              </div>
+                </div>
+              </article>
+            </div>
+
+            <!-- ITEM -->
+            <div class="cbp-item portfolio-item">
+              <article>
+                <div class="portfolio-image"> <img alt="" src="images/Burger/Main.png">
+                  <div class="portfolio-overlay"> </div>
+                  <div class="position-bottom">
+                    <p>Homework </p>
+                    <h4><a href="burger.html">Eat The Burger</a></h4>
+                  </div>
+                </div>
+              </article>
+            </div>
+
+
+            <!-- ITEM -->
+            <div class="cbp-item portfolio-item">
+              <article>
+                <div class="portfolio-image"> <img alt="" src="images/Liri Node App/movie-this-battle-angel.gif">
+                  <div class="portfolio-overlay"> </div>
+                  <div class="position-bottom">
+                    <p>Homework </p>
+                    <h4><a href="liri-node-app.html">LIRI Node App</a></h4>
+                  </div>
+                </div>
+              </article>
+            </div>
 
             <!-- ITEM -->
             <div class="cbp-item portfolio-item">
@@ -211,9 +240,10 @@
             <!-- ITEM -->
             <div class="cbp-item portfolio-item">
               <article>
-                <div class="portfolio-image"> <img alt="" src="images/Trivia Game/Screen Recording 2019-05-05 at 1.18.13 AM.gif">
+                <div class="portfolio-image"> <img alt=""
+                    src="images/Trivia Game/Screen Recording 2019-05-05 at 1.18.13 AM.gif">
                   <div class="portfolio-overlay"> </div>
-                  <div class="position-bottom"> 
+                  <div class="position-bottom">
                     <p>Homework </p>
                     <h4><a href="trivia-game.html">Trivia Game</a></h4>
                   </div>
@@ -282,7 +312,7 @@
             <h3>+52.811.538.9268</h3>
             <a href="https://www.linkedin.com/in/helenamadrid/" target="_blank"><img src="images/linkedIn.png"
                 style="width:7%; height:auto;"></a><a href="https://github.com/HelenaMadrid" target="_blank"><img
-                src="images/github.svg" style="width:7%; height:auto; margin:10px;" ></a>
+                src="images/github.svg" style="width:7%; height:auto; margin:10px;"></a>
             <!-- <p class="margin-top-30"><small> Copyright © 2016 webicode.com </small></p>
             <a href="#." class="subcribe">SUBSCRIBE VIA EMAIL</a> -->
           </div>
