--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     <li> <a href="trivia-game.html">Trivia Game</a> </li>
                     <li> <a href="liri-node-app.html">LIRI Node App</a></li>
                     <li> <a href="burger.html">Eat My Burger</a></li>
+                    <li> <a href="resumemaker.html">Eat My Burger</a></li>
                     <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                     <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                   </ul>
@@ -134,7 +135,7 @@
                   <div class="portfolio-overlay"> </div>
                   <div class="position-bottom">
                     <p>Homework </p>
-                    <h4><a href="liri-node-app.html">LIRI Node App</a></h4>
+                    <h4><a href="resumemaker.html">LIRI Node App</a></h4>
                   </div>
                 </div>
               </article>
