--- a/rock-my-world.html
+++ b/rock-my-world.html
@@ -78,6 +78,8 @@
                     <li> <a href="star-wars-rpg.html">Star Wars RPG</a> </li>
                     <li> <a href="trivia-game.html">Trivia Game</a> </li>
                     <li><a href="liri-node-app.html">LIRI Node App</a></li>
+                    <li> <a href="burger.html">Eat My Burger</a></li>
+                    <li> <a href="resumemaker.html">Resume Maker</a></li>
                     <!-- <li> <a href="portfolio_detail_02.html">portfolio detail 02 </a> </li>
                     <li> <a href="portfolio_detail_03.html">portfolio detail 03 </a> </li> -->
                   </ul>
