--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="portfolio-overlay"> </div>
                   <div class="position-bottom">
                     <p>Homework </p>
-                    <h4><a href="resumemaker.html">LIRI Node App</a></h4>
+                    <h4><a href="resumemaker.html">Resume Maker</a></h4>
                   </div>
                 </div>
               </article>
